--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,20 @@
-<p>
-  admin works!
-</p>
+<h3>Add New Album to Inventory</h3>
+<div>
+  <div>
+    <label>Album Title:</label>
+    <br>
+    <input #newTitle>
+  </div>
+
+  <div>
+    <label>Album Artist:</label>
+    <br>
+    <input #newArtist>
+  </div>
+
+  <div>
+    <label>Album Description:</label>
+    <br>
+    <textarea #newDescription></textarea>
+  </div>
+</div>
